# polydact

./: README.md  purchases.md  pyvenv.cfg
control/: control_plan.md  motor_detail.md  overview.md
design/: spiral_point_generator.py
design/3d_files/: flex_slider.stl  hand_bracket.stl  motor_frame.stl
design/circuit/: layout.md
design/stl/: bracket_stand.stl  hand_bracket.stl  motor frame.stl  motor_frame.stl  spool_body.stl  spool_top.stl
pico_serial_sensor/: CMakeLists.txt  pico_serial_sensor.c
references/: 3_cable_SpiRob.STL  references.txt
spiral/: 3D_tentacle_v1.gcode.3mf  pegues_bone_unit_v1.gcode.3mf  point_generator.py
src/polydact/: package.xml  setup.cfg  setup.py
src/polydact_interfaces/: CMakeLists.txt  package.xml
src/polydact_interfaces/msg/: Goal.msg  MotorGoal.msg  MotorState.msg
src/polydact_interfaces/srv/: Mode.srv  Set_Mode.srv
stl/1st/: finger.stl
stl/2nd/: finger.stl  pegues_finger_parts.gcode.3mf  spring.stl  spring_8mm.stl  spring_8mm_no_mid.stl  spring_pin.stl
stl/base/: base_v3.stl  base_with_slots.stl  motor_side_frame_v2.stl  motor_side_frame_v3.stl  pegues_x1c_motor_side_frame_v2.gcode.3mf  spool_v3.stl  spool_v4.stl  spool_v5.stl
stl/dual_material_tent/: 3D for full printing - 3D Tentacle (1).stl  3D for full printing - 3D Tentacle (10).stl  3D for full printing - 3D Tentacle (11).stl  3D for full printing - 3D Tentacle (12).stl  3D for full printing - 3D Tentacle (13).stl  3D for full printing - 3D Tentacle (14).stl  3D for full printing - 3D Tentacle (15).stl  3D for full printing - 3D Tentacle (16).stl  (+23 more)
(+199 files in other folders)
